This commit is necessary to make it work in Eclipse
Changed some java 17 stuff