@@ -11,7 +11,7 @@ public class SelectClosest implements SelectionStrategy {
     @Override
     public Animal select(Animal a, List<Animal> as) {
         if (!as.isEmpty()) {
-            Animal closest = as.getFirst();
+            Animal closest = as.get(0);
             for (Animal animal : as) {
                 if (a.get_position().distanceTo(animal.get_position()) < a.get_position().distanceTo(closest.get_position())) {
                     closest = animal;
